add meaningfull name and add one error

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
-.error-handling{
-    display: none;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+.error-handling {
+  display: none;
 }
